--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-overwatch-lobby",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,28 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "@types/react-copy-to-clipboard": "^5.0.7",
-    "framer-motion": "^10.18.0",
-    "i18next": "^23.7.20",
-    "next": "14.0.4",
-    "next-i18next": "^15.2.0",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18",
-    "react-i18next": "^14.0.1",
-    "swr": "^2.2.4"
+    "@heroui/accordion": "^2.2.24",
+    "@heroui/button": "^2.2.27",
+    "@heroui/card": "^2.2.25",
+    "@heroui/checkbox": "^2.3.27",
+    "@heroui/chip": "^2.2.22",
+    "@heroui/image": "^2.2.17",
+    "@heroui/link": "^2.2.23",
+    "@heroui/pagination": "^2.2.24",
+    "@heroui/progress": "^2.2.22",
+    "@heroui/react": "^2.8.5",
+    "@heroui/system": "^2.4.23",
+    "@heroui/theme": "^2.4.23",
+    "@uidotdev/usehooks": "^2.4.1",
+    "framer-motion": "^12.23.25",
+    "i18next": "^25.7.1",
+    "next": "16.0.7",
+    "next-i18next": "^15.4.3",
+    "next-themes": "^0.4.6",
+    "react": "^19",
+    "react-dom": "^19",
+    "react-i18next": "^16.3.5",
+    "swr": "^2.3.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^24",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.7",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
